# poetry_sample

./: README.md  pyproject.toml
app/: app1.py
app/app2/: app2.py
app/definition/: data.py
app/services/: sum_price.py
tests/fixture/: test_parts_sum_fixture.py
tests/simple/: test_parts_sum.py
