[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["nightshrine <yamamoto.shunsuke.20@shizuoka.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
